Update appindicator based on JDK 22