@@ -36,15 +36,15 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.jdk.version>21</project.jdk.version>
+		<project.jdk.version>22</project.jdk.version>
 
 		<!-- runtime dependencies -->
 
 		<api.version>1.3.1</api.version>
 		<secret-service.version>2.0.1-alpha</secret-service.version>
 		<kdewallet.version>1.4.0</kdewallet.version>
-		<appindicator.version>1.3.6</appindicator.version>
 		<slf4j.version>2.0.12</slf4j.version>
+		<appindicator.version>1.4.0</appindicator.version>
 
 		<!-- test dependencies -->
 		<junit.version>5.10.2</junit.version>
@@ -97,9 +97,6 @@
 				<version>3.12.1</version>
 				<configuration>
 					<release>${project.jdk.version}</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -194,7 +191,6 @@
 							<name>see</name>
 						</tag>
 					</tags>
-					<additionalOptions>--enable-preview</additionalOptions>
 				</configuration>
 			</plugin>
 		</plugins>
